# pvr.sledovanitv.cz

./: .gitignore  .travis.yml  CMakeLists.txt  FindJsonCpp.cmake  README.md  appveyor.yml
.github/: ISSUE_TEMPLATE.md  build.yml
.github/workflows/: build.yml  changelog-and-release.yml  increment-version.yml  release.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  kodi-pvr-hdhomerun.install  rules
depends/common/jsoncpp/: CMakeLists.txt
pvr.sledovanitv/: addon.xml  addon.xml.in
pvr.sledovanitv.cz/: addon.xml.in
pvr.sledovanitv.cz/resources/: settings.xml
pvr.sledovanitv.cz/resources/language/resource.language.cs_cz/: strings.po
pvr.sledovanitv.cz/resources/language/resource.language.en_gb/: strings.po
pvr.sledovanitv.cz/resources/language/resource.language.en_us/: strings.po
pvr.sledovanitv.cz/resources/language/resource.language.sk_sk/: strings.po
pvr.sledovanitv/resources/: settings.xml
pvr.sledovanitv/resources/language/resource.language.cs_cz/: strings.po
pvr.sledovanitv/resources/language/resource.language.en_gb/: strings.po
src/: Addon.cpp  Addon.h  ApiManager.cpp  ApiManager.h  CallLimiter.hh  Data.cpp  Data.h  PVRIptvData.cpp  PVRIptvData.h  apimanager.cpp  apimanager.h  base64.hpp  client.cpp  client.h  picosha2.h
xbmc/cmake/addons/addons/pvr.sledovanitv.cz/: pvr.sledovanitv.cz.txt
xbmc/project/cmake/addons/addons/pvr.sledovanitv/: pvr.sledovanitv.txt
